# qml-forward-gallery

./: .gitignore  CMakeLists.txt  README.md
src/: ClockBar.qml  DisplaySettingsDrawer.qml  Scene.qml  controller.cpp  controller.hpp  database.cpp  database.hpp  downloader.cpp  downloader.hpp  history-index.cpp  history-index.hpp  main.cpp  main.qml  qml.qrc  tokei.cpp  tokei.hpp
